--- a/Marcelo_Pinheiro_AtvPINN_AE2a.ipynb
+++ b/Marcelo_Pinheiro_AtvPINN_AE2a.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMIdMqT2Pw9rVzQX8TbL1YA",
+      "authorship_tag": "ABX9TyOiJgdwVpMt6AkFFaP94G0r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
         "\n",
         "MEC-502 Topico Especial da Mecanica dos Solidos\n",
         "\n",
-        "GitHub"
+        "GitHub : Marcelo_Pinheiro_AtvPINN_AE2a.ipynb"
       ],
       "metadata": {
         "id": "SsAiMFLGmj3R"
