--- a/Marcelo_Pinheiro_AtvPINN_AE2b.ipynb
+++ b/Marcelo_Pinheiro_AtvPINN_AE2b.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPP9nRCzFh463bjL5ysoUSs",
+      "authorship_tag": "ABX9TyPO2+qeYm4G5Ms5m7ogd+Xo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
         "\n",
         "MEC-502 Topico Especial da Mecanica dos Solidos\n",
         "\n",
-        "GitHub"
+        "GitHub : Marcelo_Pinheiro_AtvPINN_AE2b.ipynb"
       ],
       "metadata": {
         "id": "3v8cm8zgnPGh"
