--- a/Marcelo_Pinheiro_AtvPINN_AE1.ipynb
+++ b/Marcelo_Pinheiro_AtvPINN_AE1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNju3dST1vmjnseNdSDxNyk",
+      "authorship_tag": "ABX9TyP3pB4dbl5fC4cfmGp+6NiY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
         "\n",
         "MEC-502 Topico Especial da Mecanica dos Solidos\n",
         "\n",
-        "GitHub"
+        "GitHub : Marcelo_Pinheiro_AtvPINN_AE1.ipynb"
       ],
       "metadata": {
         "id": "i0gbsg2beLGN"
@@ -43,20 +43,13 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "5jYPWYEFeHCu"
-      }
-    },
-    {
-      "cell_type": "markdown",
       "source": [
-        "**EXERCICIO 1**\n",
+        "##EXERCICIO 1\n",
         "\n",
-        "1) Implemente em PyTorch uma PINN para encontar o deslocamento no problema da barra unidirecional apresentado Fig 1."
+        "1. Implemente em Pythonuma PINN para encontrar o deslocamento no problema da barra unidirecional apresentado Fig 1."
       ],
       "metadata": {
-        "id": "UMmDdp33KDKe"
+        "id": "Z-KsE1s8puiP"
       }
     },
     {
